--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,8 +18,8 @@
    <p>Já me livrei da maldição!</p>
    <script>
        window.alert('Minha primeira mensagem')
-       window.confirm('Está gostando de JS?')
-       window.prompt('Qual seu nome?')
+       window.confirm('Está gostando de JS?') // janela com botão OK ou Cancelar
+       window.prompt('Qual seu nome?') // vai perguntar o nome
    </script>
 </body>
 </html>
